--- a/src/app/modulos/register/register-especialista/register-especialista.component.html
+++ b/src/app/modulos/register/register-especialista/register-especialista.component.html
@@ -117,7 +117,7 @@
             class="invalid"
             *ngIf="form.controls['especialistaDni'].errors['max']"
           >
-            el dni del especialista debe ser menor o igual a 1000.
+            el dni del especialista debe ser menor o igual a 1000000.
           </small>
         </div>
       </div>
